force-app/main/default/objects/Conference_Journal__c/Conference_Journal__c.object-meta.xml
<CustomObject>
    <label>Conference/Journal</label>
    <nameField>
        <displayFormat>CJ-{00000}</displayFormat>
        <label>Conference/Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conference/Journal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>