force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Acronym__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Acronym__c</fullName>
    <label>Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>