force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Conference_Journal_Stand_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conference_Journal_Stand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>T2-715</description>
    <label>Conference/Journal Standardised Name</label>
    <referenceTo>Conference_Journal_Standardised_Name__c</referenceTo>
    <relationshipLabel>Conference/Journal</relationshipLabel>
    <relationshipName>Conference_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>