force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Default_FOR_Code_3__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Default_FOR_Code_3__c</fullName>
    <label>Default FOR Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>