force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finish_Date__c</fullName>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>