force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Journal_Short_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal_Short_Title__c</fullName>
    <label>Journal Short Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>