force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Multi_Disciplinary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Multi_Disciplinary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Disciplinary?</label>
    <type>Checkbox</type>
</CustomField>