force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Open_Access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Open_Access__c</fullName>
    <label>Open Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>