force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Peer_Review__c</fullName>
    <label>Peer Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>