force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Place_Of_The_Conference__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Place_Of_The_Conference__c</fullName>
    <label>Place Of The Conference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>