force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Publication_Address__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication_Address__c</fullName>
    <label>Publication Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>