force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Publisher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conference/Journal</relationshipLabel>
    <relationshipName>Conference_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>