force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Version__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>