force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Website__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>