force-app/main/default/objects/Conference_Journal__c/fields/I_RS_Year_of_Journal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_of_Journal__c</fullName>
    <label>Year of Journal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>