force-app/main/default/objects/Conference_Journal__c/recordTypes/I_RS_Conference.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Conference</fullName>
    <active>true</active>
    <label>Conference</label>
</RecordType>