force-app/main/default/objects/Conference_Journal__c/recordTypes/I_RS_Journal.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Journal</fullName>
    <active>true</active>
    <label>Journal</label>
</RecordType>