force-app/main/default/objects/Conference_Journal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Publisher__c</columns>
    <columns>I_RS_ARC_Id__c</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>I_RS_Finish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>