force-app/main/default/objects/Conference_Journal__c/listViews/All_Journals.listView-meta.xml
<ListView>
    <fullName>All_Journals</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Publisher__c</columns>
    <columns>I_RS_ARC_Id__c</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>I_RS_Finish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Conference_Journal__c.I_RS_Journal</value>
    </filters>
    <label>All Journals</label>
</ListView>